<resources>

    <string name="app_name">Just Pay Phone</string>
	<string name="check_in">START WORK</string>
	<string name="clock_out">STOP WORK</string>
	<string name="at_work_x">at work:\n%1$s</string>
	<string name="just_pay_phone_logo">JUST\nPAY\nPHONE</string>
	<string name="where_i_work">Where I Work</string>
	<string name="my_attorney">My Emergency Contact</string>
	<string name="x_location">Location: %1$f, %2$f</string>
	<plurals name="x_days_worked">
	    <item quantity="one">%1$d day worked here.</item>
	    <item quantity="other">%1$d days worked here.</item>
	</plurals>
	<string name="ph">ph. </string>
	<string name="fax">fax. </string>
	<string name="call_my_lawyer">Call my contact</string>
	<string name="write_a_message_to">Write a message to my contact</string>
	<string name="record_a_message_for">Record a message for my contact</string>
	<string name="how_long_was_your_lunch_break">How long was your lunch break?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="how_many_minutes_did">How many minutes did you stop working to eat lunch?</string>
	<string name="go">Go!</string>
	<string name="x_minutes">%1$d minutes</string>
	<string name="x_hours">%1$d hours</string>
	<string name="ok">OK</string>
	<string name="other_amount">Other amount\u2026</string>
	<string name="change">(change?)</string>
	<string name="my_gallery">My Gallery</string>
	<string name="glsp">Georgia Legal Services Program</string>
	<string name="previous_day">Previous Day</string>
	<string name="next_day">Next Day</string>
	<string name="view_my_work_summary">View my Work Summary</string>
	<string name="start_time">Start time</string>
	<string name="end_time">End time</string>
	<string name="time_for_lunch">Time for lunch</string>
	<string name="total_work_time">Total work time</string>
	<string name="weekly_total">Weekly total</string>
	<string name="we_could_not_log">We could not log you in.  Please try again.</string>
	<string name="camera">Camera</string>
	<string name="camcorder">Camcorder</string>
	
	<string name="about">About</string>
	
	<string name="preferences">Preferences</string>
    <string name="prefs_language_title">Language</string>
    <string name="pref_languages_default">System Default</string>
    <string name="pref_languages_en_us">English (US)</string>
    <string name="pref_languages_es">Spanish</string>
    
    <string name="you_cannot_take_a">You cannot take a picture.  You\'re not at work!</string>
    <string name="logout">Log out</string>
    <string name="you_have_already_logged">You have already logged today.</string>
    <string name="no_work_information_to">No work information to display</string>
    <string name="unknown">unknown</string>
    <string name="take_your_photo_to_clock_in">Take your photo to clock in</string>
    <string name="take_your_photo_to_clock_out">Take your photo to clock out</string>
    <string name="take_photos">TAKE PHOTOS</string>
    <string name="call_lawyer">CALL CONTACT</string>
    <string name="export_paystubs">EXPORT PAYSTUBS</string>
    <string name="admin">ADMIN</string>
    
    <string name="lunch_no_lunch">No\nLunch</string>
    <string name="lunch_min">MIN</string>
    
    <string name="wizard_welcome">Welcome!</string>
    <string name="wizard_choose_language">Choose a language:</string>
    <string name="wizard_get_started">Get started</string>
    <string name="wizard_step_n_of_n">Step %1$d of %2$d:</string>
    <string name="wizard_create_db">Set up your secure database.</string>
    <string name="wizard_email_optional">Email (optional)</string>
    <string name="wizard_password_dont_match">Passwords do not match =(</string>
    <string name="wizard_password_wrong_format">Your password should be more than 10 characters.</string>
    <string name="wizard_ok_next">Okay, next</string>
    <string name="wizard_take_photo_title">Take 6 boring photos to generate your device key.</string>
    <string name="wizard_key_information">Your device key will allow you and the information you captured to be secured and verified.</string>
    <string name="wizard_take_photo">Take Photos</string>
    <string name="wizard_take_photo_take">Take</string>
    <string name="wizard_key_is_being_made">Your personal device key is being made... this may take a while (but it will open happen once!)</string>
    <string name="wizard_key_made">Your key has been made.</string>
    <string name="wizard_original_images_should_be">Original images should be:</string>
    <string name="wizard_lawyer_information">Enter emergency contact information</string>
	<string name="wizard_phone_number">Phone number</string>    
    
    <string name="time_date">Sept / Oct</string>
    <string name="time_work_hours">Work Hours</string>
    <string name="time_lunch">Lunch</string>
    <string name="time_span_same_month">%1$s</string>
    <string name="time_span_months">%1$s / %2$s</string>
    <string name="time_lunch_no_lunch">-</string>
	<string name="time_lunch_minutes">%1$d MIN</string>
	<string name="time_good_job">Good job, you worked %1$s hours today!</string>
	
	<string name="camera_redo">REDO</string>
	<string name="camera_save">SAVE</string>
	<string name="exporting_your_paystubs">Exporting your work log\u2026</string>
	<string name="sending_work_log_to_server">Sending work log to server</string>
	
</resources>