<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:id="@+id/organization_name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <TextView
            android:id="@+id/organization_details"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>

    <Button
        android:id="@+id/organization_view_work_summary"
        style="@style/jpp_button_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_my_work_summary" />

    <Button
        android:id="@+id/organization_launch_call"
        style="@style/jpp_button_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_my_lawyer" />

    <Button
        android:id="@+id/organization_launch_message"
        style="@style/jpp_button_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_a_message_to" />

    <Button
        android:id="@+id/organization_launch_recording"
        style="@style/jpp_button_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_a_message_for" />

</LinearLayout>