<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/popup" >

    <TextView style="@style/jpp_h2"
        android:id="@+id/paystub_current_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center" />

    <TextView
        android:id="@+id/paystub_no_data_for_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paystub_current_date"
        android:text="@string/no_work_information_to"
        android:visibility="gone" />
    
    <TableLayout
        android:id="@+id/paystub_current_stats_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/paystub_current_date" />

    <LinearLayout
        android:id="@+id/paystub_day_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/paystub_previous_day"
            style="@style/jpp_button_c"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/previous_day" />

        <Button
            android:id="@+id/paystub_next_day"
            style="@style/jpp_button_c"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/next_day" />
    </LinearLayout>

</RelativeLayout>