<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/info.guardianproject.justpayphone"
        android:id="@+id/work_call_lawyer_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#10A89E"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp" >

        <info.guardianproject.justpayphone.app.views.CustomFontButton
            android:id="@+id/btnAdmin"
            style="@style/jpp_h5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/ic_admin_pref"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/admin" />


        <info.guardianproject.justpayphone.app.views.CustomFontButton
            android:id="@+id/btnCallLawyer"
            style="@style/jpp_action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:drawableTop="@drawable/ic_btn_call"
            android:minHeight="50dp"
            android:layout_margin="10dp"
            android:text="@string/call_lawyer" />
        
        <info.guardianproject.justpayphone.app.views.CustomFontButton
            android:id="@+id/btnExportPaystubs"
            style="@style/jpp_action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:drawableTop="@drawable/ic_notes"
            android:minHeight="100dp"
            android:layout_margin="10dp"
            android:text="@string/export_paystubs" />

    </LinearLayout>
