<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EC4136"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:id="@+id/llTopHalf"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical" >

        <info.guardianproject.justpayphone.app.views.CustomFontTextView
            style="@style/jpp_h2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/how_long_was_your_lunch_break" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/black_border"
            android:scaleType="centerInside"
            android:src="@drawable/ic_pic_lunch" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/svButtons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="36dp"
            android:stretchColumns="0,1,2" >

            <TableRow
                android:id="@+id/tableRow1"
                android:background="@color/cream"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RelativeLayout
                    android:id="@+id/btnLunchNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="1px"
                    android:layout_marginTop="1px"
                    android:background="@drawable/lunch_button_selector" >

                    <ImageView
                        android:id="@+id/ivLunchNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_lunch_no" />

                    <info.guardianproject.justpayphone.app.views.CustomFontTextView
                        android:id="@+id/tvLunchNo"
                        style="@style/lunch_h4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ivLunchNo"
                        android:layout_centerHorizontal="true"
                        android:text="@string/lunch_no_lunch" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btnLunch10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1px"
                    android:layout_marginTop="1px"
                    android:background="@drawable/lunch_button_selector" >

                    <ImageView
                        android:id="@+id/ivLunch10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_lunch_10" />

                    <info.guardianproject.justpayphone.app.views.CustomFontTextView
                        android:id="@+id/tvLunch10"
                        style="@style/jpp_h2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ivLunch10"
                        android:layout_centerHorizontal="true"
                        android:text="10" />

                    <info.guardianproject.justpayphone.app.views.CustomFontTextView
                        android:id="@+id/tvLunch10min"
                        style="@style/lunch_h4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvLunch10"
                        android:layout_centerHorizontal="true"
                        android:text="@string/lunch_min" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btnLunch20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1px"
                    android:background="@drawable/lunch_button_selector" >

                    <ImageView
                        android:id="@+id/ivLunch20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_lunch_20" />

                    <info.guardianproject.justpayphone.app.views.CustomFontTextView
                        android:id="@+id/tvLunch20"
                        style="@style/jpp_h2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ivLunch20"
                        android:layout_centerHorizontal="true"
                        android:text="20" />

                    <info.guardianproject.justpayphone.app.views.CustomFontTextView
                        android:id="@+id/tvLunch20min"
                        style="@style/lunch_h4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvLunch20"
                        android:layout_centerHorizontal="true"
                        android:text="@string/lunch_min" />
                </RelativeLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:background="@color/cream"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RelativeLayout
                    android:id="@+id/btnLunch30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1px"
                    android:layout_marginRight="1px"
                    android:layout_marginTop="1px"
                    android:background="@drawable/lunch_button_selector" >

                    <ImageView
                        android:id="@+id/ivLunch30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_lunch_30" />

                    <info.guardianproject.justpayphone.app.views.CustomFontTextView
                        android:id="@+id/tvLunch30"
                        style="@style/jpp_h2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ivLunch30"
                        android:layout_centerHorizontal="true"
                        android:text="30" />

                    <info.guardianproject.justpayphone.app.views.CustomFontTextView
                        android:id="@+id/tvLunch30min"
                        style="@style/lunch_h4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvLunch30"
                        android:layout_centerHorizontal="true"
                        android:text="@string/lunch_min" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btnLunch45"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1px"
                    android:layout_marginRight="1px"
                    android:layout_marginTop="1px"
                    android:background="@drawable/lunch_button_selector" >

                    <ImageView
                        android:id="@+id/ivLunch45"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_lunch_45" />

                    <info.guardianproject.justpayphone.app.views.CustomFontTextView
                        android:id="@+id/tvLunch45"
                        style="@style/jpp_h2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ivLunch45"
                        android:layout_centerHorizontal="true"
                        android:text="45" />

                    <info.guardianproject.justpayphone.app.views.CustomFontTextView
                        android:id="@+id/tvLunch45min"
                        style="@style/lunch_h4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvLunch45"
                        android:layout_centerHorizontal="true"
                        android:text="@string/lunch_min" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btnLunch60"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1px"
                    android:layout_marginTop="1px"
                    android:background="@drawable/lunch_button_selector" >

                    <ImageView
                        android:id="@+id/ivLunch60"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_lunch_60" />

                    <info.guardianproject.justpayphone.app.views.CustomFontTextView
                        android:id="@+id/tvLunch60"
                        style="@style/jpp_h2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ivLunch60"
                        android:layout_centerHorizontal="true"
                        android:text="60" />

                    <info.guardianproject.justpayphone.app.views.CustomFontTextView
                        android:id="@+id/tvLunch60min"
                        style="@style/lunch_h4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvLunch60"
                        android:layout_centerHorizontal="true"
                        android:text="@string/lunch_min" />
                </RelativeLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>